# LOP-CodeInGame-cli

./: README.md  lopauth.py  lopdownload.py  lopsubmit.py  pyproject.toml  setup.cfg  utilities.py
command/: lopauth.py  lopdownload.py  lopgenerate.py  lopsubmit.py
enumerations/: main.py
generator/: __init__.py  base.py  index.py  python.py
lop_codeingame_cli/command/: lopauth.py  lopdownload.py  lopgenerate.py  lopsubmit.py
lop_codeingame_cli/enumerations/: main.py
lop_codeingame_cli/generator/: __init__.py  base.py  python.py
lop_codeingame_cli/model/: Exercise.py
lop_codeingame_cli/utilities/: file.py  request.py  variables.py
model/: Exercise.py
utilities/: file.py  request.py  variables.py
