[tool.poetry]
name = "lop-codeingame-cli"
version = "0.1.0"
description = ""
authors = ["machkouroke <machkour20.mo1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lop_codeingame_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
requests = "^2.31.0"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
